--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,57 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+main {
+  background: linear-gradient(#1c5380 40%, white 60%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+section {
+  display: flex;
+  padding: 10%;
+  justify-content: space-between;
+}
+
+.phone-image-container {
+  width: 30%;
+}
+
+.right-section-container {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  display: flex;
+}
+
+article {
+  background-image: url('frame.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+}
+h3 {
+  width: 60%;
+  
+}
+
+.download-link-frame {
+  display: flex;
+  justify-content: space-around;
+}
+
+footer {
+  display: flex;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+}
